# miden-client

./: .gitignore  .taplo.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  eslint.config.js  package.json  rustfmt.toml
.config/: nextest.toml
.github/workflows/: build.yml  enforce-web-client-version-bump.yml  lint.yml  publish-web-client-next.yml  test.yml  web-docs-check.yml
crates/rust-client/: Cargo.toml  README.md
crates/rust-client/src/: builder.rs  errors.rs  lib.rs  mock.rs  tests.rs
crates/rust-client/src/account/: mod.rs  procedure_roots.rs
crates/rust-client/src/note/: import.rs  mod.rs  note_screener.rs  note_update_tracker.rs
crates/rust-client/src/rpc/: endpoint.rs  errors.rs  mod.rs
crates/rust-client/src/rpc/domain/: account.rs  note.rs  transaction.rs
crates/rust-client/src/rpc/tonic_client/: api_client.rs  mod.rs
crates/rust-client/src/store/: data_store.rs  mod.rs
crates/rust-client/src/store/sqlite_store/: account.rs  mod.rs  transaction.rs
crates/rust-client/src/store/web_store/account/: mod.rs  models.rs
crates/rust-client/src/store/web_store/chain_data/: mod.rs  utils.rs
crates/rust-client/src/store/web_store/js/: sync.js
crates/rust-client/src/store/web_store/transaction/: mod.rs  utils.rs
crates/rust-client/src/sync/: block_header.rs  mod.rs  state_sync.rs  state_sync_update.rs  tag.rs
crates/rust-client/src/test_utils/: common.rs  mock.rs
crates/rust-client/src/test_utils/config/: miden-client-rpc.toml
crates/rust-client/src/transaction/: mod.rs
crates/rust-client/src/transaction/request/: builder.rs  foreign.rs  mod.rs
crates/testing/node-builder/: Cargo.toml
crates/testing/node-builder/examples/: simple.rs
crates/testing/node-builder/src/: lib.rs  main.rs
crates/testing/prover/: Cargo.toml
crates/testing/prover/src/: main.rs
crates/web-client/: Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js
crates/web-client/js/: index.js
crates/web-client/js/types/: index.d.ts
crates/web-client/src/: helpers.rs  import.rs  lib.rs  new_account.rs  new_transactions.rs  sync.rs  transactions.rs
crates/web-client/src/models/: account_builder.rs  account_delta.rs  account_id.rs  assembler.rs  mod.rs  note.rs  note_recipient.rs  note_script.rs  note_tag.rs
crates/web-client/src/models/transaction_request/: transaction_request_builder.rs
crates/web-client/test/: README.md  fpi.test.ts  global.test.d.ts  import.test.ts  mocha.global.setup.mjs  new_account.test.ts  new_transactions.test.ts  notes.test.ts  transactions.test.ts  webClientTestUtils.ts
docs/src/: cli-config.md  install-and-run.md  library.md
docs/src/get-started/: create-account-use-faucet.md
docs/src/web-client/api/: README.md
docs/src/web-client/api/classes/: AccountBuilder.md  AccountDelta.md  NoteTag.md  TransactionRequestBuilder.md  WebClient.md
scripts/: detect-web-client-changes.sh  integration-tests.sh  publish-crates.sh  start-binary-bg.sh  start-node-bg.sh
tests/: Cargo.toml  README.md
tests/integration/: common.rs  custom_transactions_tests.rs  fpi_tests.rs  main.rs  onchain_tests.rs  swap_transactions_tests.rs
tests/integration/asm/: custom_p2id.masm
tests/src/: custom_transactions_tests.rs  fpi_tests.rs  main_tests.rs  network_transaction_tests.rs  onchain_tests.rs  swap_transactions_tests.rs
