[workspace]
resolver = "2"

members = [
  "bin/miden-cli",
  "crates/rust-client",
  "crates/testing/node-builder",
  "crates/testing/prover",
  "crates/web-client",
  "tests",
]

default-members = ["bin/miden-cli", "crates/rust-client"]

[workspace.package]
authors      = ["miden contributors"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-client"
rust-version = "1.87"

[workspace.dependencies]
# Miden dependencies
miden-lib                  = { default-features = false, version = "0.10" }
miden-node-block-producer  = { version = "0.10" }
miden-node-ntx-builder     = { version = "0.10" }
miden-node-proto-build     = { default-features = false, version = "0.10" }
miden-node-rpc             = { version = "0.10" }
miden-node-store           = { version = "0.10" }
miden-node-utils           = { version = "0.10" }
miden-objects              = { default-features = false, version = "0.10" }
miden-remote-prover        = { features = ["concurrent"], version = "0.10" }
miden-remote-prover-client = { default-features = false, features = ["tx-prover"], version = "0.10" }
miden-testing              = { default-features = false, features = ["async"], version = "0.10" }
miden-tx                   = { default-features = false, features = ["async"], version = "0.10" }

# External dependencies
async-trait = "0.1"
miette      = { features = ["fancy"], version = "7.2" }
rand        = { version = "0.9" }
serde       = { features = ["derive"], version = "1.0" }
thiserror   = { default-features = false, version = "2.0" }
tokio       = { features = ["macros", "net", "rt-multi-thread"], version = "1.40" }
tracing     = { version = "0.1" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
# cast_possible_truncation =   "allow"  # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
