[package]
authors.workspace      = true
description            = "Integration Tests for the miden client library and CLI"
edition.workspace      = true
license.workspace      = true
name                   = "miden-client-tests"
publish                = false
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.10.0"

[dependencies]
# Workspace dependencies
miden-client = { features = ["sqlite", "std", "testing", "tonic"], path = "../crates/rust-client" }

# Miden dependencies
miden-objects = { default-features = false, features = ["testing"], workspace = true }

# External dependencies
rand = { workspace = true }

[dev-dependencies]
async-trait        = { version = "0.1" }
miden-lib          = { default-features = false, features = ["testing"], workspace = true }
tokio              = { workspace = true }
winter-maybe-async = { features = ["async"], version = "0.12" }

[[test]]
name = "integration"
path = "src/main_tests.rs"
