[package]
version                = "0.10.0"
authors.workspace      = true
description            = "A minimal node implementation for running integration tests of the Miden client. NOT for production use."
edition.workspace      = true
keywords               = ["miden", "node", "protobuf", "rpc", "testing"]
license.workspace      = true
name                   = "node-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "testing-node-builder"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow                    = "1.0"
miden-objects             = { workspace = true }
miden-lib                 = { workspace = true }
miden-node-block-producer = { git = "https://github.com/0xMiden/miden-node", branch = "tomyrd-update-lexicographic-words" }
miden-node-rpc            = { git = "https://github.com/0xMiden/miden-node", branch = "tomyrd-update-lexicographic-words" }
miden-node-store          = { git = "https://github.com/0xMiden/miden-node", branch = "tomyrd-update-lexicographic-words" }
miden-node-utils          = { git = "https://github.com/0xMiden/miden-node", branch = "tomyrd-update-lexicographic-words" }
miden-node-ntx-builder    = { git = "https://github.com/0xMiden/miden-node", branch = "tomyrd-update-lexicographic-words" }
rand_chacha               = { version = "0.9" }
rand                      = { workspace = true }
tokio                     = { version = "1.0", features = ["full"] }
url                       = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
