[package]
authors.workspace      = true
description            = "A minimal node implementation for running integration tests of the Miden client. NOT for production use."
edition.workspace      = true
keywords               = ["miden", "node", "protobuf", "rpc", "testing"]
license.workspace      = true
name                   = "node-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.10.0"

[[bin]]
name = "testing-node-builder"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow                    = "1.0"
miden-lib                 = { workspace = true }
miden-node-block-producer = { version = "0.10" }
miden-node-ntx-builder    = { version = "0.10" }
miden-node-rpc            = { version = "0.10" }
miden-node-store          = { version = "0.10" }
miden-node-utils          = { version = "0.10" }
miden-objects             = { workspace = true }
rand                      = { workspace = true }
rand_chacha               = { version = "0.9" }
tokio                     = { features = ["full"], version = "1.0" }
url                       = { features = ["serde"], version = "2.5" }

[dev-dependencies]
tempfile = "3.0"
