[package]
authors.workspace      = true
description            = "A minimal node implementation for running integration tests of the Miden client. NOT for production use."
edition.workspace      = true
keywords               = ["miden", "node", "protobuf", "rpc", "testing"]
license.workspace      = true
name                   = "node-builder"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.10.0"

[[bin]]
name = "testing-node-builder"
path = "src/main.rs"

[dependencies]
# Miden dependencies
miden-lib                 = { workspace = true }
miden-node-block-producer = { workspace = true }
miden-node-ntx-builder    = { workspace = true }
miden-node-rpc            = { workspace = true }
miden-node-store          = { workspace = true }
miden-node-utils          = { workspace = true }
miden-objects             = { workspace = true }

# External dependencies
anyhow      = "1.0"
rand        = { workspace = true }
rand_chacha = { version = "0.9" }
tokio       = { features = ["full"], version = "1.0" }
url         = { features = ["serde"], version = "2.5" }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
