[package]
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
name                   = "testing-remote-prover"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
# Miden dependencies
miden-node-utils    = { workspace = true }
miden-remote-prover = { features = ["concurrent"], workspace = true }

# External dependencies
anyhow             = "1.0"
tokio              = { features = ["full"], version = "1.0" }
tokio-stream       = { features = ["net"], version = "0.1" }
tonic              = { default-features = false, features = ["transport"], version = "0.13" }
tonic-web          = { version = "0.13" }
tracing            = { version = "0.1" }
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }

[lints]
workspace = true
